--- a/web/src/index.css
+++ b/web/src/index.css
@@ -29,6 +29,11 @@ body {
   min-height: 100vh;
 }
 
+.root {
+  display: flex;
+  justify-content: center;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
