--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,9 +23,9 @@ a:hover {
 
 body {
   margin: 0;
-
   min-width: auto;
   min-height: 100vh;
+  background-color: rgb(242, 242, 242) !important;
 }
 
 .root {
