--- a/web/src/index.css
+++ b/web/src/index.css
@@ -49,6 +49,7 @@ button {
   color: white;
   cursor: pointer;
   transition: border-color 0.25s;
+  border-radius: 5px;
 }
 button:hover {
   border-color: #646cff;
