--- a/web/src/composant/CurriculumView/CurriculumView.module.css
+++ b/web/src/composant/CurriculumView/CurriculumView.module.css
@@ -1,14 +1,24 @@
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-top: 2rem;
+  max-width: 800px;
+}
 .container {
   display: flex;
-  max-width: 900px;
+
+  min-height: 700px;
   margin: 20px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 .sidebar {
-  background-color: #f8d7da;
+  background-color: #b4d2ff;
   width: 30%;
   padding: 20px;
+  border-radius: 10px 0 0 10px;
   color: #333;
 }
 
@@ -31,9 +41,10 @@
 }
 
 .main {
-  background-color: #fff;
+  background-color: #ffffff;
   width: 70%;
   padding: 20px;
+  border-radius: 0 10px 10px 0;
 }
 
 .main h1 {
@@ -47,7 +58,7 @@
   font-size: 1.5em;
   margin-top: 20px;
   margin-bottom: 10px;
-  color: #e75c73;
+  color: #0e6efc;
 }
 
 .main .section {
@@ -81,7 +92,7 @@
 }
 
 .main .highlight {
-  background-color: #f8d7da;
+  background-color: #b4d2ff;
   display: inline-block;
   padding: 2px 10px;
   margin-bottom: 10px;
