--- a/web/src/composant/PreviewCV/PreviewCV.module.css
+++ b/web/src/composant/PreviewCV/PreviewCV.module.css
@@ -1,11 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px;
-}
-
 .isLoading {
   display: flex;
   justify-content: center;
@@ -17,4 +9,11 @@
   top: 0;
   left: 0;
   z-index: 100;
+}
+
+.homeContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 2rem;
+  gap: 2rem;
 }
