--- a/web/src/composant/CurriculumView/CurriculumView.module.css
+++ b/web/src/composant/CurriculumView/CurriculumView.module.css
@@ -1,8 +1,10 @@
 .mainContainer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: end;
   align-items: end;
   margin-top: 2rem;
+  gap: 1rem;
   max-width: 800px;
 }
 .buttonAction {
